# obs-audio-pan-filter

./: CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: main.yml
ci/: forum-update-info.json
ci/windows/: package-windows.cmd
installer/: installer-macOS.pkgproj.in
src/: obs-audio-pan-filter.c  plugin-macros.h.in  stereo-pan-filter.c
